test-cases/valid/reject/bad_if_condition_type.ul
void main() {
    if (1) { // Can't use int type in condition
        print "This should not work";
    }
    else {
        foo(false);
    }
}

int foo(boolean b) {
    return 1;
}
